--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -143,6 +143,8 @@
 	<string name="seguro_eliminar">¿Seguro que desea eliminar?</string>
 	<string name="ask_to_ignore_energy_saving_again">Al apagarse la pantalla, el tracking se detendrá si no desactiva las optimizaciones de batería. Está seguro?</string>
 	<string name="ask_to_enable_gps">El servicio de rastreo necesita que actives la localización por GPS</string>
+	<string name="permission_required">Se necesita el permiso para poder usar la app</string>
+	<string name="permission_required_title">¿Conceder permiso?</string>
 
 	<!-- Sin -->
 	<string name="sin_filtro">Se eliminaron los parámetros de búsqueda</string>
