--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,6 +143,8 @@
 	<string name="seguro_salir">You made changes. Do you want to save?</string>
 	<string name="ask_to_ignore_energy_saving_again">The tracking will stop in doze mode if battery optimizations are on. Are you sure?</string>
 	<string name="ask_to_enable_gps">The tracking service needs you to activate the GPS</string>
+	<string name="permission_required">The permission is required to use the app</string>
+	<string name="permission_required_title">Grant permission?</string>
 
 	<!-- Sin -->
 	<string name="sin_lugar">A location must be stablished…</string>
