--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,6 +130,7 @@
 
 	<!-- Ask -->
 	<string name="seguro_eliminar">Are you sure you want to remove?</string>
+	<string name="seguro_eliminar_pto">Are you sure you want to remove the point?</string>
 	<string name="seguro_salir">You made changes. Do you want to save?</string>
 	<string name="ask_to_ignore_energy_saving_again">The tracking will stop in doze mode if battery optimizations are on. Are you sure?</string>
 	<!-- string name="ask_to_enable_gps">The tracking service needs you to activate the GPS</string -->
