--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,11 +57,14 @@
 	<string name="salir">Exit anyway</string>
 	<string name="ver_mapa">Show map</string>
 	<string name="buscar">Search</string>
+	<string name="stop_geotracking">Stop tracking</string>
 	<string name="stop_geofencing">Stop alerts</string>
 	<string name="start_geofencing">Start alerts</string>
 	<string name="actualizar_posicion">Refresh location</string>
 	<string name="geofencing_service">Geofencing service</string>
 	<string name="geofencing_service_stoping">Stoping geofencing service…</string>
+    <string name="geotracking_service">Tracking service</string>
+	<string name="geotracking_service_stoping">Stoping tracking service…</string>
 
 	<!-- Items -->
 	<string name="lugares">Points</string>
